tests/success/comptime_destruct_reference_invalidation.bz
function test()
{
	(consteval {
		let _ = 0;
		defer {
			let _ = 0;
		};
	});
}
