tests/error/comptime/slice_construction2.bz
function test()
{
	(consteval {
		let i = 0;
		let j = 0;
		__builtin_slice_from_ptrs(&j, &i);
	});
}
